--- a/src/components/navbar_white.hbs
+++ b/src/components/navbar_white.hbs
@@ -56,6 +56,14 @@
 
               <li class="group relative">
                 <a
+                  href="/examples"
+                  class="ud-menu-scroll mx-8 flex py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-black lg:group-hover:text-primary "
+                >
+                  Examples
+                </a>
+              </li>
+              <li class="group relative">
+                <a
                   href="/docs"
                   class="ud-menu-scroll mx-8 flex py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-black lg:group-hover:text-primary "
                 >
