--- a/src/layouts/single.hbs
+++ b/src/layouts/single.hbs
@@ -22,6 +22,10 @@
     <link rel="manifest" href="/assets/images/site.webmanifest">
 
     <script src="/src/assets/js/main.js" type="module"></script>
+
+        <script src="/src/assets/js/prism.js" ></script>
+        <link rel="stylesheet" href="/src/styles/prism.css" data-noprefix />
+ 
 </head>
 
 <body>
