Doc page updated

--- a/src/pages/docs.hbs
+++ b/src/pages/docs.hbs
@@ -1,29 +1,11 @@
 {{> "layouts/single.hbs"}}
 {{#*inline "main-block"}}
+ 
 
-<!-- ====== Banner Section Start -->
-<div class="relative z-10 overflow-hidden pb-[60px] pt-[120px] dark:bg-dark md:pt-[130px] lg:pt-[160px]">
-  <div
-    class="absolute bottom-0 left-0 w-full h-px bg-gradient-to-r from-stroke/0 via-stroke to-stroke/0 dark:via-dark-3">
-  </div>
-  <div class="container">
-    <div class="flex flex-wrap items-center -mx-4">
-      <div class="w-full px-4">
-        <div class="text-center">
-          <h1 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]">
-            Documentation
-          </h1>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- ====== Banner Section End -->
-
-<section class="pb-8 pt-20 dark:bg-dark lg:pb-[70px]">
+<section class="pb-8 pt-40 dark:bg-dark lg:pb-[70px]">
   <div class="container mx-auto px-4">
-    <div class="-mx-4 flex flex-wrap">
-      <div class="w-full md:w-1/2 lg:w-1/3">
+    <div class="px-4 mx-auto max-w-8xl lg:px-8">
+      <div class="z-20 hidden lg:block fixed bottom-0 right-auto w-[18rem] top-[7.1rem]">
         <ul class="list-none px-4">
           <li class="mb-2">
             <a href="#quickstart"
@@ -76,7 +58,7 @@
               class="no-underline hover:underline text-blue-600 hover:text-blue-800 text-lg">Auditing Emails</a></li>
         </ul>
       </div>
-      <div class="w-full md:w-1/2 lg:w-2/3">
+      <div class="relative grow overflow-hidden mx-auto px-1 lg:-ml-12 lg:pl-[23.7rem]">
 
         <section id="quickstart" class="mb-12 px-4">
           <h3 class="text-2xl font-bold mb-10">Quickstart</h3>
