docs are moved to a saas

--- a/src/components/navbar.hbs
+++ b/src/components/navbar.hbs
@@ -35,16 +35,9 @@
                   Starter Guide
                 </a>
               </li>
-
+ 
               <li class="group relative">
-                <a href="/examples"
-                  class="ud-menu-scroll mx-8 flex py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70">
-                  Examples
-                </a>
-              </li>
-
-              <li class="group relative">
-                <a href="/docs"
+                <a href="https://uniquemailer.mintlify.app"
                   class="ud-menu-scroll mx-8 flex py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70">
                   Documentation
                 </a>
