--- a/src/components/footer.hbs
+++ b/src/components/footer.hbs
@@ -9,31 +9,15 @@
             <div
               class="-mx-3 flex items-center justify-center md:justify-start"
             >
-              <a
-                href="privacy-policy"
-                class="px-3 text-base text-gray-7 hover:text-white hover:underline"
-              >
-                Privacy policy
-              </a>
-              <a
-                href="legal-notice"
-                class="px-3 text-base text-gray-7 hover:text-white hover:underline"
-              >
-                Legal notice
-              </a>
-              <a
-                href="tos"
-                class="px-3 text-base text-gray-7 hover:text-white hover:underline"
-              >
-                Terms of service
-              </a>
+ 
             </div>
           </div>
         </div>
         <div class="w-full px-4 md:w-1/3 lg:w-1/2">
           <div class="my-1 flex justify-center md:justify-end">
             <p class="text-base text-white">
-              &copy; 2024 <a href="https://github.com/kemalyen">Kemal Yenilmez</a>
+              Released under the MIT License. 
+              &copy; 2025 <a href="https://github.com/kemalyen">Kemal Yenilmez</a>
             </p>
           </div>
         </div>
